[gd_scene load_steps=5 format=3 uid="uid://beqpgg051ofkk"]

[ext_resource type="Script" path="res://Scripts/Creatures/creature.gd" id="1_hq2l1"]
[ext_resource type="Texture2D" uid="uid://da0us5qkic6av" path="res://Textures/Creature/creature.png" id="2_e2f7t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w2dtx"]
radius = 20.0
height = 78.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_75som"]
radius = 14.0
height = 28.0

[node name="Creature" type="CharacterBody2D"]
collision_layer = 16
input_pickable = true
motion_mode = 1
script = ExtResource("1_hq2l1")

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
shape = SubResource("CapsuleShape2D_w2dtx")

[node name="Sensors" type="Node2D" parent="."]

[node name="Mouth" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="Mouth Shape" type="CollisionShape2D" parent="Mouth"]
position = Vector2(-3, -36)
rotation = 3.14159
shape = SubResource("CapsuleShape2D_75som")

[node name="Creature" type="Sprite2D" parent="."]
position = Vector2(-4, 0)
scale = Vector2(0.5625, 0.5625)
texture = ExtResource("2_e2f7t")

[node name="Mortality" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="body_entered" from="Mouth" to="." method="eat"]
[connection signal="timeout" from="Mortality" to="." method="_on_mortality_timeout"]
